# flower-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/flower_mcp/: __main__.py  client.py  server.py
tests/: conftest.py  test_action_tools.py  test_client.py  test_read_tools.py
