[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower-mcp"
version = "0.1.0"
description = "MCP server for Celery Flower monitoring and management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
flower-mcp = "flower_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/flower_mcp"]
